git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@974 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/remisiones/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/remisiones/startup.vm
@@ -275,7 +275,7 @@
 															<td>
 																<INPUT TYPE="text" name="orden_compra" style="width:75px;">
 															</td>
-															<td width="30"></td>
+															<td width="30"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_oc"></div></td>
 															<td width="55">Vendedor</td>
 															<td width="180" colspan="3">
 																<SELECT NAME="vendedor" style="width:180px"></SELECT>
