git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@986 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -558,6 +558,7 @@
 											<li>
 												<a href="#" class="sub">Cat&aacute;logos &raquo;</a>
 												<ul>
+													<li><a href="../proequipos/startup.agnux">Equipos</a></li>
 													<li><a href="../proequiposadic/startup.agnux">Equipos Adicionales</a></li>
 													<li><a href="../protipoequipo/startup.agnux">Tipos de Equipo</a></li>
 													<li><a href="../proinstrumentosmedicion/startup.agnux">Instrumentos de Medici&oacute;n</a></li>
