git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@996 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/proordenproduccion/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/proordenproduccion/startup.vm
@@ -167,7 +167,7 @@
                                                                                                                 <td width="20px"></td>
                                                                                                             </tr>
                                                                                                             <tr>
-                                                                                                                <td colspna="12">
+                                                                                                                <td colspan="12">
                                                                                                                     &nbsp;
                                                                                                                 </td>
                                                                                                             </tr>
