git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1007 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/css/components/tablescroll/jquery.tablescroll.css
+++ b/erp-quimicos/src/main/webapp/css/components/tablescroll/jquery.tablescroll.css
@@ -1,5 +1,4 @@
-.tablescroll
-{ font: 12px normal Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif; background-color:#fff; }
+.tablescroll{ font: 12px normal Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif; background-color:#fff; }
 
 .tablescroll td, 
 .tablescroll_wrapper,
