git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1009 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/css/components/tablescroll/tablescrollv2.css
+++ b/erp-quimicos/src/main/webapp/css/components/tablescroll/tablescrollv2.css
@@ -3,13 +3,13 @@
 .tablescrollv2 td, 
 .tablescrollv2_wrapper,
 .tablescrollv2_head{ 
-	border:1px solid #ccc; 
+	border:1px solid #ccc;
 }
-
+/*
 .tablescrollv2v2 td{ 
 	padding:3px 3px; 
 }
-
+*/
 .tablescrollv2_wrapper{ 
 	border-left:0; 
 }
@@ -34,6 +34,11 @@
 .tablescrollv2 tbody td{ 
 	border-right:0; 
 	border-bottom:0; 
+	margin-top:2px;
+}
+
+.tablescrollv2 tbody td.bordertopolid{ 
+	border-top:2px solid #ccc;
 }
 
 .tablescrollv2 tfoot{ 
