--- a/erp-quimicos/src/main/webapp/css/modalbox/clientsantcancel/formaClientsAntCancel.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/clientsantcancel/formaClientsAntCancel.css
@@ -98,7 +98,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
 	width:550px;
-	height:320px;
+	height:340px;
 	border-radius:10px;
 	background-color:#e9e9e9;
 	border:3px solid #454442;
@@ -131,6 +131,14 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 	margin-right:10px;
 	margin-left:10px;
 	margin-bottom:10px;
+}
+
+.gral input{
+	height:15px;
+}
+
+.gral select{
+	height:17px;
 }
 
 #grid_productos td{
